production/2-grafana/3-tempo/lb-tempo-distributor.yaml
apiVersion: v1
kind: Service
metadata:
  name: tp-tempo-distributor-lb
  namespace: grafana
spec:
  selector:
    app.kubernetes.io/component: distributor
    app.kubernetes.io/instance: tp
    app.kubernetes.io/name: tempo
  ports:
    - name: grpc-lb
      protocol: TCP
      port: 8444 # port yang akan diakses dari luar
      targetPort: 4317 # port di pod Tempo yang pakai grpc
  type: LoadBalancer # atau NodePort, tergantung setup cluster
